Module java.base is now only searched if no -m options are given